--- a/WcfServiceLibrary1/App.config
+++ b/WcfServiceLibrary1/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -34,39 +34,24 @@
     </diagnostics>
     <services>
       <service name="WcfServiceLibrary1.Service1">
+        <endpoint address="" binding="basicHttpBinding" contract="WcfServiceLibrary1.IService1">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8800/Design_Time_Addresses/WcfServiceLibrary1/Service1/" />
           </baseAddresses>
         </host>
-        <!-- Service Endpoints -->
-        <!-- Se non è completamente qualificato, l'indirizzo è relativo all'indirizzo di base fornito sopra -->
-        <endpoint address="" binding="basicHttpBinding" contract="WcfServiceLibrary1.IService1">
-          <!-- 
-              Durante la distribuzione è necessario rimuovere o sostituire l'elemento Identity seguente in modo 
-              che rispecchi l'identità con cui viene eseguito il servizio distribuito. Se viene rimosso, WCF dedurrà 
-               automaticamente un'identità appropriata.
-          -->
-          <identity>
-            <dns value="localhost" />
-          </identity>
-        </endpoint>
-        <!-- Metadata Endpoints -->
-        <!-- L'endpoint di scambio metadati viene utilizzato dal servizio per offrire una migliore visualizzazione ai client. -->
-        <!-- L'endpoint non utilizza un'associazione protetta e deve essere protetto o rimosso prima della distribuzione -->
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
-        <behavior>
-          <!-- Per evitare la diffusione di informazioni sui metadati, 
-          impostare i valori seguenti su false prima della distribuzione -->
-          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True" />
-          <!-- Per ricevere i dettagli sull'eccezione per scopi di debug in caso di guasti, 
-          impostare il valore riportato sotto su true. Impostarlo su false prima della diffusione 
-          per evitare di diffondere informazioni sull'eccezione -->
-          <serviceDebug includeExceptionDetailInFaults="False" />
+        <behavior name="">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
