--- a/MovieServiceLibrary2/app.config
+++ b/MovieServiceLibrary2/app.config
@@ -19,12 +19,14 @@
     <services>
       <service name="MovieServiceLibrary2.MovieService">
         <endpoint address="webep" behaviorConfiguration="restBehavior"
-          binding="webHttpBinding" bindingConfiguration="" contract="MovieServiceLibrary2.IMovieService">
+          binding="webHttpBinding" bindingConfiguration="" name="wcfrestep"
+          contract="MovieServiceLibrary2.IMovieService">
           <identity>
             <dns value="localhost" />
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <endpoint address="mex" binding="mexHttpBinding" name="mexep"
+          contract="IMetadataExchange" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost/MovieServiceLibrary2/MovieService/" />
