--- a/MovieServiceLibrary2/app.config
+++ b/MovieServiceLibrary2/app.config
@@ -26,10 +26,6 @@
             <dns value="localhost" />
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" name="mexep"
-          contract="IMetadataExchange" />
-        <endpoint address="basic" binding="basicHttpBinding" bindingConfiguration=""
-          name="httpep" contract="MovieServiceLibrary2.IMovieService" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8080/MovieServiceLibrary2/MovieService/" />
@@ -45,7 +41,7 @@
       </endpointBehaviors>
       <serviceBehaviors>
         <behavior name="servBehavior">
-          <serviceMetadata httpGetEnabled="true" httpGetUrl="wsdlfile"
+          <serviceMetadata httpGetEnabled="true" httpGetUrl="http://localhost:8080/MovieServiceLibrary2/MovieService/mex"
             httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
