--- a/XmlToExcelWebClient/XmlToExcelWebClient.csproj
+++ b/XmlToExcelWebClient/XmlToExcelWebClient.csproj
@@ -70,6 +70,7 @@
     <Content Include="Applicazione.xml" />
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="UnaApplicazione1.xml" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -84,6 +85,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XmlDataList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
